# Confidential-PROFITT

./: README.md
effectiveness/: README.md  java_sh.sh  pom.xml  requirements.txt
effectiveness/.run/: CrimeCommunity.run.xml
effectiveness/notebooks/: IGS_plotting.ipynb  acc_v_fair.ipynb
effectiveness/notebooks/.ipynb_checkpoints/: Acc_v_fair-Copy1-checkpoint.ipynb  IGS_plotting-checkpoint.ipynb  results_to_csvs-checkpoint.ipynb
effectiveness/python_scripts/: plotting.py  results_to_csvs.py
effectiveness/sbatch_scripts/: baseline_run.sh  run.sh
effectiveness/src/main/java/com/examples/jsatexamples/: DStump.java  ImpScore.java  rewriting.java  run.java  testing.java  testingFairTrees.java
effectiveness/src/main/java/jsat/classifiers/: Classifier.java  SierrasMeasures.java
effectiveness/src/main/java/jsat/classifiers/boosting/: Bagging.java  EmphasisBoost.java
effectiveness/src/main/java/jsat/classifiers/trees/: DecisionStump.java  DecisionTree.java  ERTrees.java  ExtraTree.java  ImpurityScore.java  MDI.java  PercentSplitter.java  RaffSplitter.java  RandomDecisionTree.java  RandomForest.java  Splitter.java  ThresholdSplitter.java
efficiency/: CMakeLists.txt  README.md
efficiency/PROFITT/: constant.cpp  utils.cpp  zk_dt.cpp
efficiency/test/: CMakeLists.txt  benchmark.cpp  benchmark_ONLINE.cpp  benchmark_RF_ONLINE.cpp  experiment_config.py  hello.cpp  ram_test.cpp  run_experiment.py  toy_example.cpp  zk_dt_unit.cpp
